--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ button:hover {
         height: 200px;
     }
 
-   #img2 {
+   #img2 { 
        height: 200px;
        width: 100px;
    }
@@ -159,6 +159,8 @@ button:hover {
 
 
 .imgtext {
+    padding-top: 50px;
+    padding-left: 10px;
     margin-top: 20px;
     color: white;
     font-weight: bolder;
